fix(UI): fixes the order component's max-width to be 366px on mobile devices

--- a/css/page/order.css
+++ b/css/page/order.css
@@ -19,7 +19,7 @@
 
 /* Order component */
 .order {
-  width: fit-content;
+  max-width: 366px;
   background-color: #fbfbfb;
   display: flex;
   flex-direction: column;
@@ -141,6 +141,7 @@
 
   /* Order */
   .order {
+    max-width: initial;
     width: 100%;
     flex-direction: row;
     flex-wrap: wrap;
